samples/_failures_safe/1761495467_c10747_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e3278ba.c: In function ‘boundingbox_from_vertices’:
./samples/SAFE/__tmp_3e3278ba.c:138:41: error: expected ‘)’ at end of input
  138 |         if (vertices[i].x < result.min.x
      |            ~                            ^
      |                                         )
./samples/SAFE/__tmp_3e3278ba.c:138:9: error: expected declaration or statement at end of input
  138 |         if (vertices[i].x < result.min.x
      |         ^~
./samples/SAFE/__tmp_3e3278ba.c:138:9: error: expected declaration or statement at end of input
